[Fix] Column overlap in podcast views

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,3 +226,7 @@ legend {
 #account {
     color: #aaa;
 }
+
+#sub-left-col {
+    min-width: 275px !important;
+}
